# nf-interpreter-1

./: CMakeLists.txt  CMakeSettings.json  azure-pipelines.yml  cmake-variants.TEMPLATE.json
CMake/: ChibiOS_target_os.h.in  ESP32_target_os.h.in  FreeRTOS_target_os.h.in  TI_SimpleLink_target_os.h.in  TivaWare.CMakeLists.cmake.in  WICED_SDK.CMakeLists.cmake.in
CMake/Modules/: CHIBIOS_STM32F0xx_sources.cmake  CHIBIOS_STM32F4xx_sources.cmake  FindChibiOSnfOverlay.cmake  FindFreeRTOS.cmake  FindTI_SimpleLink.cmake  FindWICED_SDK.cmake  FindnanoFramework.TI.EasyLink.cmake  FreeRTOS_MT3620_GCC_options.cmake  FreeRTOS_MT3620_sources.cmake  FreeRTOS_TI_TM4C_GCC_options.cmake  FreeRTOS_TI_TM4C_sources.cmake  FreeRTOS_iMXRT10xx_GCC_options.cmake  NF_NativeAssemblies.cmake  WICED_SDK.cmake
install-scripts/: Initialize-VSCode.ps1  Set-VSCode-CMakes.ps1  Set-VSCode-Tasks.ps1  configure-vscode-common.psm1  install-esp32-tools.ps1
src/CLR/Include/: WireProtocol_MonitorCommands.h  nanoCLR_Headers.h  nanoCLR_PlatformDef.h
src/CLR/WireProtocol/: WireProtocol_MonitorCommands.c
src/HAL/: nanoHAL_Capabilites.c
src/HAL/Include/: nanoHAL_Boot.h  nanoHAL_Capabilites.h  nanoHAL_ReleaseInfo.h  nanoHAL_v2.h
src/System.Device.I2c/: sys_dev_i2c_native.h
src/nanoFramework.Runtime.Events/: nf_rt_events_native.cpp
targets/CMSIS-OS/ChibiOS/Include/: Target_Windows_Storage.h  lwipopts.h
targets/CMSIS-OS/ChibiOS/MBN_QUAIL/: target_common.c
targets/CMSIS-OS/ChibiOS/MBN_QUAIL/nanoBooter/: mbn_quail_booter-DEBUG.ld  mbn_quail_booter.ld
targets/CMSIS-OS/ChibiOS/MBN_QUAIL/nanoCLR/: nanoHAL.cpp
targets/CMSIS-OS/ChibiOS/MXCHIP_AZ3166/: CMakeLists.txt  board.h  cmake-variants.json  launch.json  target_windows_devices_spi_config.cpp
targets/CMSIS-OS/ChibiOS/MXCHIP_AZ3166/nanoBooter/: main.c
targets/CMSIS-OS/ChibiOS/MXCHIP_AZ3166/nanoCLR/: main.c
targets/CMSIS-OS/ChibiOS/NETDUINO3_WIFI/nanoBooter/: netduino3wifi_booter-DEBUG.ld  netduino3wifi_booter.ld
targets/CMSIS-OS/ChibiOS/NETDUINO3_WIFI/nanoCLR/: netduino3wifi_CLR-DEBUG.ld  netduino3wifi_CLR.ld
targets/CMSIS-OS/ChibiOS/ORGPAL_PAL3_STM32F469_NF/nanoCLR/: halconf.h  main.c  mcuconf.h
targets/CMSIS-OS/ChibiOS/ST_NUCLEO_F091RC/: CMakeLists.txt
targets/CMSIS-OS/ChibiOS/ST_STM32F429I_DISCOVERY/: target_common.c
targets/CMSIS-OS/ChibiOS/ST_STM32F429I_DISCOVERY/nanoBooter/: STM32F429xI_booter-DEBUG.ld  STM32F429xI_booter.ld
targets/CMSIS-OS/ChibiOS/ST_STM32F429I_DISCOVERY/nanoCLR/: STM32F429xI_CLR-DEBUG.ld  STM32F429xI_CLR.ld
targets/CMSIS-OS/ChibiOS/ST_STM32F4_DISCOVERY/: CMakeLists.txt
targets/CMSIS-OS/ChibiOS/common/: LaunchCLR.c
targets/CMSIS-OS/ChibiOS/nanoCLR/: targetHAL.cpp  target_platform.h.in
targets/CMSIS-OS/ChibiOS/nanoCLR/System.Device.I2c/: sys_dev_i2c_native_System_Device_I2c_I2cDevice.cpp  sys_dev_i2c_native_target.h
targets/CMSIS-OS/ChibiOS/nanoCLR/Windows.Devices.SerialCommunication/: win_dev_serial_native_Windows_Devices_SerialCommunication_SerialDevice.cpp  win_dev_serial_native_target.h
targets/CMSIS-OS/ChibiOS/nanoCLR/Windows.Storage/: win_storage_native_Windows_Storage_StorageFile.cpp  win_storage_native_target.h
targets/ChibiOS/NETDUINO3_WIFI/: board.c
targets/FreeRTOS/: CMakeLists.txt
targets/FreeRTOS/Mediatek/: CMakeLists.txt
targets/FreeRTOS/Mediatek/AVNET_MT3620/: AzureSphereMakeImageNF.cmake  AzureSphereRTCoreToolchainVFP.cmake  CMakeLists.txt  CMakeSettings.json  Device_BlockStorage-DEBUG.c  Device_BlockStorage.c  FreeRTOSConfig.h  app_manifest.json  linker.ld  main.c  targetHAL_ConfigurationManager.cpp  target_BlockStorage.c  target_common.c  target_common.h.in
targets/FreeRTOS/Mediatek/common/: CMakeLists.txt  Target_BlockStorage_MT3620_Driver.c  WireProtocol_HAL_Interface.c  mt3620-uart.c  mt3620-uart.h  platform_BlockStorage.c  targetHAL_ConfigurationManager.cpp
targets/FreeRTOS/Mediatek/common/include/: Target_BlockStorage_MT3620_Driver.h  Target_Windows_Storage.h  platform_target_capabilities.h
targets/FreeRTOS/Mediatek/common/nanoCLR/: CMakeLists.txt  Memory.cpp  targetHAL.cpp  targetHAL_Power.c  targetHAL_Time.cpp
targets/FreeRTOS/NXP/common/: CMakeLists.txt
targets/FreeRTOS/NXP/nanoCLR/System.Device.I2c/: sys_dev_i2c_native_System_Device_I2c_I2cDevice.cpp  sys_dev_i2c_native_target.h
targets/FreeRTOS/NXP/nanoCLR/Windows.Devices.I2c/: win_dev_i2c_native_Windows_Devices_I2C_I2cDevice.cpp
targets/FreeRTOS/TI_TM4C/: CMakeLists.txt
targets/FreeRTOS/TI_TM4C/TI_TM4C129EXL/: CMakeLists.txt  FreeRTOSConfig.h  target_BlockStorage.c  target_common.c  target_common.h.in
targets/FreeRTOS/TI_TM4C/TI_TM4C129EXL/common/: CMakeLists.txt  Device_BlockStorage-DEBUG.c  (+1 more)
targets/FreeRTOS/TI_TM4C/common/: CMakeLists.txt  TM4CFlash_BlockStorageInterface.c  Target_BlockStorage_TM4CFlashDriver.c  WireProtocol_HAL_Interface.c  targetHAL_ConfigurationManager.cpp
targets/FreeRTOS/TI_TM4C/include/: CMakeLists.txt  TargetPAL.h  Target_BlockStorage_TM4CFlashDriver.h  Target_Windows_Storage.h  platform_target_capabilities.h
targets/FreeRTOS/TI_TM4C/nanoBooter/: CMakeLists.txt  WireProtocol_MonitorCommands.c
targets/FreeRTOS/common/: CMakeLists.txt  hardfault.c  targetHAL.c
targets/FreeRTOS/common/include/: lwipopts.h  targetHAL.h
targets/FreeRTOS/common/nanoCLR/: CLR_Startup_Thread.c
targets/FreeRTOS_ESP32/ESP32_WROOM_32/IDF/: CMakeLists.txt
targets/TI-SimpleLink/TI_CC1352P1_LAUNCHXL/: CMakeLists.txt
targets/TI-SimpleLink/TI_CC1352P1_LAUNCHXL/easylink/: easylink_config.c
targets/TI-SimpleLink/TI_CC1352R1_LAUNCHXL/nanoCLR/: main.c
targets/TI-SimpleLink/nanoCLR/: targetHAL.cpp
targets/TI-SimpleLink/nanoCLR/System.Device.I2c/: sys_dev_i2c_native_System_Device_I2c_I2cDevice.cpp
targets/TI-SimpleLink/nanoCLR/nanoFramework.Hardware.TI/: nf_hardware_ti_native.h
targets/os/win32/Include/: targetHAL.h
targets/os/win32/nanoCLR/: Various.cpp
(+15 files in other folders)
